<resources>
    <string name="app_name">太牛</string>
    <string name="home">首页</string>
    <string name="market">行情</string>
    <string name="selfchoice">自选</string>
    <string name="transaction">交易</string>
    <string name="information">我的</string>
    <string name="selfChoiceStock">自选股</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="securityName">证券名称</string>
    <string name="currentPrice">现价</string>
    <string name="flowInto">流入资金</string>
    <string name="progressTitle">正在刷新\u3000最后更新：</string>
    <string name="ledPlate">领涨板块</string>
    <string name="ledStock">领涨股</string>
    <string name="SZZS">上证指数</string>
    <string name="SZZSS">深证指数</string>
    <string name="CYBZS">创业板指</string>
    <string name="electronicInformation">电子信息</string>
    <string name="communication">通信</string>
    <string name="transportLogistics">运输物流</string>
    <string name="foreignTrade">外贸</string>
    <string name="machinery">机械</string>
    <string name="buildingMaterials">建材</string>
    <string name="stockName">股票名称</string>
    <string name="zfzd">涨幅/涨跌</string>
    <string name="ldg">领跌股</string>
    <string name="zjlr">资金流入</string>
    <string name="zjlc">资金流出</string>
    <string name="hsl">换手率</string>
    <string name="lcje">流出金额</string>
    <string name="lrje">流入金额</string>
    <string name="sliding_cje">成交额</string>
    <string name="bestHigh">最高</string>
    <string name="bestLow">最低</string>
    <string name="open">今开</string>
    <string name="hybk">行业板块</string>
    <string name="gnbk">概念板块</string>
    <string name="dybk">地域板块</string>
    <string name="dqj">当前价</string>
    <string name="zdf">涨跌幅</string>
    <string name="timek">分时</string>
    <string name="fiveK">五日</string>
    <string name="mounthK">月K</string>
    <string name="dayK">日K</string>
    <string name="weekK">周K</string>
    <string name="minutesK">分钟</string>
    <string name="buy">买入</string>
    <string name="sell">卖出</string>
    <string name="addSelfChoice">添加自选</string>
    <string name="more">更多</string>
    <string name="news">新闻</string>
    <string name="announcement">公告</string>
    <string name="study">研报</string>
    <string name="profiles">简况</string>
    <string name="finance">财务</string>
    <string name="shareholder">股东</string>
    <string name="cyb">创业板</string>
    <string name="zf">涨幅</string>
    <string name="hsag">沪深A股</string>
    <string name="pankou">盘口</string>
    <string name="mingxi">明细</string>
    <string name="newStockCalendar">新股日历</string>
    <string name="xgrl1">新股日历</string>
    <string name="wdsg">我的申购</string>
    <string name="jrwxgfx">今日无新股发行</string>
    <string name="yjdx">一键打新</string>
    <string name="yjsg">一键申购</string>
    <string name="dss">待上市</string>
    <string name="mcdm">名称代码</string>
    <string name="fxj">发行价</string>
    <string name="zql">中签率</string>
    <string name="ssrq">上市日期</string>
    <string name="xghq">新股行情</string>
    <string name="xj">现价</string>
    <string name="ljzf">累计涨幅</string>
    <string name="sjfx">2016年6月29日发行</string>
    <string name="sgdm">申购代码</string>
    <string name="fxsyl">发行市盈率</string>
    <string name="dgsgsj">顶格申购市值</string>
    <string name="sjss">2016年6月29日上市</string>
    <string name="totaleIncrease">累计涨幅</string>
    <string name="todayPublish">今日发行</string>
    <string name="todayMarket">今日上市</string>
    <string name="newStockShenGog">新股申购</string>
    <string name="newStockShenGogGuiZe">新股申购规则</string>
    <string name="oneKeyShenGog">一键申购</string>
    <string name="newStockRiLi">新股日历</string>
    <string name="newStockFaXing">今日2只新股发行</string>
    <string name="yiJianSubscribe">一键申购</string>
    <string name="mySubscribe">中签查询</string>
    <string name="queryLimit">查询可用额度</string>
    <string name="subscribeRule">新股申购规则</string>
    <string name="subscribeRule_text">新规一学就会</string>
    <string name="zglt">中国联通</string>
    <string name="yiFaXingWeiShangShi">已发行未上市</string>
    <string name="shenGouRiQi">申购日期：</string>
    <string name="shenGouJiaGe">申购价格：</string>
    <string name="shenGouGuShu">申购股数：</string>
    <string name="ZhongQianShuLiang">中签数量：</string>
    <string name="RiQi">06.21</string>
    <string name="kong">           - - </string>
    <string name="mySubscribeLimit">我的申购额度</string>
    <string name="mySubscribeLimit2">我的申购额度 (个人多账户市值合并计算)</string>
    <string name="queryDetils">查看详情</string>
    <string name="queryKeYongEDu">查询可用额度</string>
    <string name="updateShenGouEDu">修改申购额度</string>
    <string name="fundsearch">请输入基金代码/基金名称/基金公司</string>
    <string name="HuoBiJiJin">货币基金</string>
    <string name="HuoBiJiJinShenGou">货币基金申购</string>
    <string name="HuoBiJiJinShuHui">货币基金赎回</string>
    <string name="HuoBiJiJinWeiTuoChaXun">货币基金委托查询</string>
    <string name="HuoBiJiCheDan">货币基金撤单</string>
    <string name="JiJinDaiMa">基金代码</string>
    <string name="ShenGouJinE">申购金额</string>
    <string name="QingShuRuJiJinDaiMa">请输入基金代码</string>
    <string name="QingShuRuShuHuiFenE">请输入赎回份额</string>
    <string name="QingShuRuShenGouJinE">请输入申购金额</string>
    <string name="JiJinMingCheng">基金名称</string>
    <string name="GuDongZhangHao">股东账号</string>
    <string name="KeYongZiJin">可用资金</string>
    <string name="KeYongZiJin_1">可用份额</string>
    <string name="ShuHuiFenE">赎回份额</string>
    <string name="ZiJinJingZhi">资金净值</string>
    <string name="HBJJWeiTuoChaXun">货币基金委托查询</string>
    <string name="ChangNeiJiJin">场内基金</string>
    <string name="JiJinRenGou">基金认购</string>
    <string name="JiJinShenGou">基金申购</string>
    <string name="JiJinShuHui">基金赎回</string>
    <string name="RenGouJinE">认购金额</string>
    <string name="ChangNeiJiJinRenGou">场内基金认购</string>
    <string name="QingShuRuRenGouJinE">请输入认购金额</string>
    <string name="ChangNeiJiJinShenGou">场内基金申购</string>
    <string name="ChangNeiJiJinShuHui">场内基金赎回</string>
    <string name="OTC_rengou">OTC认购</string>
    <string name="OTC_shengou">OTC申购</string>
    <string name="OTC_shuhui">OTC赎回</string>
    <string name="OTC_chanpindaima">产品代码</string>
    <string name="OTC_rengoujine">认购金额</string>
    <string name="OTC_shengoujine">申购金额</string>
    <string name="OTC_shuhuifene">赎回份额</string>
    <string name="OTC_shuruchanpindaima">输入产品代码</string>
    <string name="OTC_shururengoujine">输入认购金额</string>
    <string name="OTC_shurufene">输入份额</string>
    <string name="OTC_chanpinmingcheng">产品名称</string>
    <string name="OTC_chanpinjingzhi">产品净值</string>
    <string name="OTC_keyongzijin">可用资金</string>
    <string name="OTC_xuanzeotcchanpin">选择OTC产品</string>
    <string name="OTC_xuanzechicangotc">选择持仓OTC</string>
    <string name="OTC_chaxun">查询</string>
    <string name="OTC_zhanghu">OTC账户</string>
    <string name="OTC_weituochaxun">委托查询</string>
    <string name="OTC_kaihu">OTC开户</string>
    <string name="OTC_chengjiaochaxun">成交查询</string>
    <string name="OTC_zhanghuchaxun">OTC账户查询</string>
    <string name="OTC_wotongyi">我已仔细阅读并同意签署以上各项协议</string>
    <string name="OTC_dianzihetongchaxun">电子合同查询</string>
    <string name="OTC_dianzihetongliushui">电子合同流水</string>
    <string name="OTC_dianzihetongqianshu">电子合同签署</string>
    <string name="OTC_qingyuedubingqianshuxieyi">请阅读并签署协议</string>
    <string name="OTC_jihezichanguanlijihuashuomingshu">《集合资产管理计划说明书》</string>
    <string name="OTC_jihezichanguanlihetong">《集合资产管理合同》</string>
    <string name="OTC_fengxianjieshishu">《风险揭示书》</string>
    <string name="OTC_woyizixiyuedubingtongyiqianshu">开通OTC账户</string>
    <string name="OTC_kaifangshijijinzhanghukaili">《开放式基金账户开立申请协议书》</string>
    <string name="OTC_zhengquantouzijinijinjijinrenquanyixuzhi">《证券投资基金投资人权益须知》</string>
    <string name="haoduxinwen">资讯</string>
    <string name="haodugushi">好读故事</string>
    <string name="kanzheli">看这里，故事里的股市更精彩</string>
    <string name="gupiao">相关股票</string>
    <string name="daima">代码</string>
    <string name="zuixinjia">最新价</string>
    <string name="zhangdiefu">涨跌幅</string>
    <string name="yijianzixuan">一键自选</string>
    <string name="bianjilanmu">编辑栏目</string>
    <string name="zhongdashijian">重大事件</string>
    <string name="newsInfo">资讯新闻</string>
    <string name="XW_text">以上信息仅供参考。</string>
    <string name="dwjj">帝王洁具</string>
    <string name="sgjc">申购进程</string>
    <string name="gpdm">股票代码</string>
    <string name="gpdm1">002798</string>
    <string name="sgrq">申购日期</string>
    <string name="sgrq1">1996-09-27</string>
    <string name="zqgbr">中签公布日</string>
    <string name="zqgbr1">--</string>
    <string name="zql1">0.00%</string>
    <string name="zqh">中签号</string>
    <string name="jjjdr">资金解冻日</string>
    <string name="fxzl">发行资料</string>
    <string name="fxjg">发行价格</string>
    <string name="fxjg1">10.57元</string>
    <string name="fxsyl1">22.98</string>
    <string name="fxzs">发行总数</string>
    <string name="sgsx">申购上限</string>
    <string name="sgsx1">20000.00万股</string>
    <string name="jyfw">经营范围</string>
    <string name="gsjj">公司简介</string>
    <string name="ztsmc">招投说明数</string>
    <string name="search_cancle">取消</string>
    <string name="search_hintTxt">请输入股票代码/或股票名称首字母</string>
    <string name="remain_search_hintTxt">请输入完整的股票代码</string>
    <string name="recentlySee">最近浏览过的股票</string>
    <string name="hostoryChoice">历史自选股</string>
    <string name="moveHostory">清除记录</string>
    <string name="checkAndsynchronization">注册用户，同步自选股</string>
    <string name="headAdd">手工添加</string>
    <string name="hotSearch">热搜股票</string>
    <string name="impleStock">导入持仓股</string>
    <string name="sell5">卖5</string>
    <string name="sell4">卖4</string>
    <string name="sell3">卖3</string>
    <string name="sell2">卖2</string>
    <string name="sell1">卖1</string>
    <string name="buy5">买5</string>
    <string name="buy4">买4</string>
    <string name="buy3">买3</string>
    <string name="buy2">买2</string>
    <string name="buy1">买1</string>
    <string name="noSearchResult">无搜索结果</string>
    <string name="exitAppPrompt">在按一次退出</string>
    <string name="ChiCang">持仓</string>
    <string name="zzc">总资产 ( 元 )</string>
    <string name="zzcShuLiang">298753.66</string>
    <string name="ccyk">持仓盈亏</string>
    <string name="ccykShuLiang">-4000.00</string>
    <string name="sz">市值</string>
    <string name="szShuLiang">122400.00</string>
    <string name="ky">可用</string>
    <string name="kyShuLiang">10000.00</string>
    <string name="kq">可取</string>
    <string name="kqShuLiang">300.00</string>
    <string name="mcsz">名称/市值</string>
    <string name="yk">盈亏/%</string>
    <string name="ccky">持仓/可用</string>
    <string name="xjcb">现价/成本</string>
    <string name="StartDate">2016-04-05</string>
    <string name="to">至</string>
    <string name="FinishDate">2016-04-05</string>
    <string name="wtcx">委托查询</string>
    <string name="jr">今日</string>
    <string name="yzn">一周内</string>
    <string name="yyn">一月内</string>
    <string name="syn">三月内</string>
    <string name="mcgs">名称/价格</string>
    <string name="wtsj">委托时间</string>
    <string name="wtcj">委托/成交</string>
    <string name="mmzt">买卖/状态</string>
    <string name="cx">查询</string>
    <string name="cjcx">成交查询</string>
    <string name="mcjg">名称/价格</string>
    <string name="cj_wtsj">委托/时间</string>
    <string name="mmsl">买卖/数量</string>
    <string name="custom">自定义</string>
    <string name="text_rs">证券名称</string>
    <string name="text_rs2">涨跌幅</string>
    <string name="text_rs3">搜索量</string>
    <string name="text_rs4">加自选</string>
    <string name="voteEnter">进入投票</string>
    <string name="voteTitle1">股东大会名称：</string>
    <string name="voteTitle2">大会编码：</string>
    <string name="voteTitle3">产品公司名称：</string>
    <string name="voteTitle4">产品公司代码：</string>
    <string name="voteTitle5">开始日期：</string>
    <string name="voteTitle6">终止日期：</string>
    <string name="voteTitle7">最后交易日：</string>
</resources>