<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 投票列表-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size40"
        android:background="@color/bgColor">

        <TextView
            android:id="@+id/voteNameTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/size12"
            android:gravity="center_vertical"
            android:textColor="@color/hushenTab_titleColor"
            android:textSize="@dimen/txtSize15"
            android:textStyle="bold" />

        <Button
            android:id="@+id/voteTitleBt"
            android:layout_width="@dimen/size60"
            android:layout_height="@dimen/size22"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size12"
            android:background="@drawable/lonin5"
            android:text="@string/voteEnter"
            android:textColor="@color/white"
            android:textSize="@dimen/txtSize12" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/vote_layout_style">

            <TextView
                android:text="@string/voteTitle1"
                style="@style/vote_title_style"/>

            <TextView
                android:id="@+id/voteContent1"
                style="@style/vote_content_style" />

        </LinearLayout>

        <LinearLayout
            style="@style/vote_layout_style">

            <TextView
                android:text="@string/voteTitle2"
                style="@style/vote_title_style"/>

            <TextView
                android:id="@+id/voteContent2"
                style="@style/vote_content_style" />

        </LinearLayout>

        <LinearLayout
            style="@style/vote_layout_style">

            <TextView
                android:text="@string/voteTitle3"
                style="@style/vote_title_style"/>

            <TextView
                android:id="@+id/voteContent3"
                style="@style/vote_content_style" />

        </LinearLayout>

        <LinearLayout
            style="@style/vote_layout_style">

            <TextView
                android:text="@string/voteTitle4"
                style="@style/vote_title_style"/>

            <TextView
                android:id="@+id/voteContent4"
                style="@style/vote_content_style" />


        </LinearLayout>

        <LinearLayout
            style="@style/vote_layout_style">

            <TextView
                android:text="@string/voteTitle5"
                style="@style/vote_title_style"/>

            <TextView
                android:id="@+id/voteContent5"
                style="@style/vote_content_style" />


        </LinearLayout>

        <LinearLayout
            style="@style/vote_layout_style">

            <TextView
                android:text="@string/voteTitle6"
                style="@style/vote_title_style"/>

            <TextView
                android:id="@+id/voteContent6"
                style="@style/vote_content_style" />

        </LinearLayout>
        <LinearLayout
            style="@style/vote_layout_style">

            <TextView
                android:text="@string/voteTitle7"
                style="@style/vote_title_style"/>

            <TextView
                android:id="@+id/voteContent7"
                style="@style/vote_content_style" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>