<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.tpyzq.mobile.pangu.view.tabLineIndicator.TabLineIndicator
        android:background="@color/white"
        android:id="@+id/transferPageIndicator"
        android:layout_marginTop="@dimen/size5"
        android:orientation="horizontal"
        app:tab_count ="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/txtSize13"
            android:gravity="center"
            android:text="@string/jr"
            android:padding="@dimen/size10"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/txtSize13"
            android:gravity="center"
            android:text="@string/yzn"
            android:padding="@dimen/size10"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/txtSize13"
            android:gravity="center"
            android:text="@string/yyn"
            android:padding="@dimen/size10"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/txtSize13"
            android:gravity="center"
            android:text="@string/syn"
            android:padding="@dimen/size10"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/txtSize13"
            android:gravity="center"
            android:text="@string/custom"
            android:padding="@dimen/size10"
            android:layout_height="wrap_content" />

    </com.tpyzq.mobile.pangu.view.tabLineIndicator.TabLineIndicator>

    <android.support.v4.view.ViewPager
        android:id="@+id/transferQueryViewPager"
        android:layout_marginTop="@dimen/size5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>