<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size30"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/size20"
        android:paddingRight="@dimen/size20">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|fill"
            android:text="@string/text_rs"
            android:textColor="@color/newStockTitle"
            android:textSize="@dimen/txtSize12" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">


            <TextView
                android:id="@+id/RiseAndndFall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_rs2"
                android:textColor="@color/hushenTab_titleColor"
                android:textSize="@dimen/txtSize12" />
        </RelativeLayout>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_rs3"
            android:textColor="@color/newStockTitle"
            android:textSize="@dimen/txtSize12" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|end"
            android:text="@string/text_rs4"
            android:textColor="@color/newStockTitle"
            android:textSize="@dimen/txtSize12" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0.5"
        android:background="@color/lineColor" />

</LinearLayout>